changes reffered to module 26.9